--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,19 @@ li {
   font-weight: bold;
   cursor: pointer;
 }
+.popular-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.popular-rank {
+  font-size: 20px;
+  max-width: 10px;
+}
+.space-list-items {
+  margin-bottom: 7px;
+}
+.avatar {
+  width: 150px;
+  border-radius: 50%;
+}
